--- a/charts/argo-cd/templates/argocd-configs/argocd-tls-certs-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-tls-certs-cm.yaml
@@ -4,12 +4,13 @@ metadata:
   name: argocd-tls-certs-cm
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" "tls-certs-cm") | nindent 4 }}
-  {{- with .Values.configs.tlsCertsAnnotations }}
+  {{- with .Values.configs.tls.annotations }}
   annotations:
     {{- range $key, $value := . }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
   {{- end }}
-{{- with .Values.configs.tlsCerts }}
-{{- toYaml . | nindent 0 }}
+{{- with .Values.configs.tls.certs }}
+data:
+  {{- toYaml . | nindent 2 }}
 {{- end }}
